tests/base/invalid/Function_CompileFail_4.whiley
import whiley.lang.*:*

int f(int x):
    sys.out.println(str(x))

void ::main(System sys,[string] args):
    f(1)
